bk_ida/gccida/g1/init_cumulative_args
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2005:63: error: use of undeclared identifier 'zero_cum_47'
*( __m128i *)&cum->words = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2006:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2007:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2041:12: error: invalid operands to binary expression ('struct rtx_def' and 'tree [51]')
if ( v8[2] != *( &global_trees + 27) ) 
     ~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2055:63: error: use of undeclared identifier 'zero_cum_47'
*( __m128i *)&cum->words = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2056:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2057:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2066:63: error: use of undeclared identifier 'zero_cum_47'
*( __m128i *)&cum->words = _mm_load_si128( ( const __m128i *)&zero_cum_47); 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2067:44: error: use of undeclared identifier 'zero_cum_47'
*( _QWORD *)&cum->sse_nregs = *( _QWORD *)&zero_cum_47.sse_nregs; 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/i386.c:2068:20: error: use of undeclared identifier 'zero_cum_47'
cum->maybe_vaarg = zero_cum_47.maybe_vaarg; 
                   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_cumulative_args/src/obj/i386.o] Error 1
